<resources>
    <string name="app_name">App Widget Sample</string>
    <string name="app_widget_message">All the functionality for this app is in the app widget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_id">Widget ID</string>
    <string name="app_widget_text">XX</string>
    <string name="last_updated">Last Updated</string>
    <string name="widget_update">%1$d @%2$s</string>
    <string name="update_now">Update Now</string>
</resources>
