<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/widget_margin"
                android:background="#09C">

    <LinearLayout
            android:id="@+id/section_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            style="@style/AppWidgetSection">

        <TextView
                android:id="@+id/appwidget_id_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/widget_id"
                style="@style/AppWidgetLabel"/>
        <TextView
                android:id="@+id/appwidget_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_widget_text"
                style="@style/AppWidgetText"/>

    </LinearLayout>
    <LinearLayout
            android:id="@+id/section_update"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_below="@id/section_id"
            android:layout_width="match_parent"
            style="@style/AppWidgetSection"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/appwidget_update_label"
                android:layout_marginBottom="2dp"
                style="@style/AppWidgetLabel"
                android:text="@string/last_updated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/appwidget_update"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/widget_update"
                style="@style/AppWidgetText"
                android:layout_height="0dp"/>

    </LinearLayout>

    <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/section_update"
            android:layout_centerHorizontal="true"
            android:text="@string/update_now"
            style="@style/AppWidgetButton"/>

</RelativeLayout>